# roto2-cpp-qt6

./: .gitignore  CMakeLists.txt
src/: macros.h  main.cpp
src/data/: CurveUtils.cpp  CurveUtils.h  FrameImageHandler.cpp  FrameImageHandler.h  VideoHandler.cpp
src/utils/: CurveUtils.cpp  CurveUtils.h  FrameImageHandler.cpp  FrameImageHandler.h  VideoHandler.cpp  VideoHandler.h  utils.h
src/window/: CanvasWidget.cpp  CanvasWidget.h  SketchWindow.cpp  SketchWindow.h
